Iniciando a implementação de Hateoas no projeto.